# calinet-main

./: .gitignore  README.md  environment.yml  pyproject.toml
calinet/: __init__.py  config.py  data.py  logger.py  plotting.py  utils.py
calinet/core/: anonymize.py  dataset.py  events.py  io.py  metadata.py  pheno.py  physio.py  pupil.py  shock.py  units.py  utils.py
calinet/exports/: autonomate.py  blinder.py  calibench.py  ezyscr.py  selector.py  separator.py  utils.py
calinet/imports/: biopac.py  eyelink.py  mat.py  pspm.py  psychopy.py  smi.py
calinet/misc/: LDN_transfer_function.mat  calinet_plot.m  calinet_synth_data.m  make_synth_calinet_bids.m  metadata.csv  metadata_tpl.csv
calinet/sites/: amsterdam.py  austin.py  bielefeld.py  bologna.py  bonn.py  leuven.py  london.py  newyork.py  reading.py  southampton.py  stockholm.py  wuerzburg.py
calinet/templates/: common.py  english.py  german.py
notebooks/: calinet_glm.ipynb  manual_trimming.ipynb  pheno_total_scores.ipynb  test.ipynb  test_marking.ipynb
scripts/: README.md  calinet_autonomate.py  calinet_blinder.py  calinet_convert.py  calinet_ezyscr.py  calinet_import_smr.ps1  calinet_select.py  calinet_separate.py  calinet_trim.py
